Creating Jekyll theme based on blog prototype

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,5 +16,7 @@
     {% include footer.html %}
 
   </body>
-
+  <script type="text/javascript">
+    $('#container').packery();
+  </script>
 </html>
