--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,14 @@
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
+
+  <script type="text/javascript" src="{{ "/javascripts/jquery-2.1.4.min.js" | prepend: site.baseurl }}"></script>
+  <script type="text/javascript" src="{{ "/javascripts/materialize.min.js" | prepend: site.baseurl }}"></script>
+  <script type="text/javascript" src="{{ "/javascripts/packery.pkgd.min.js" | prepend: site.baseurl }}"></script>
 </head>
