--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,3 +1,7 @@
+@import 'materialize';
+@import 'font-awesome';
+@import 'bootstrap-social';
+
 /**
  * Reset some basic elements
  */
@@ -154,19 +158,15 @@ pre {
  * Wrapper
  */
 .wrapper {
-    max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
-    max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
     margin-right: auto;
     margin-left: auto;
-    padding-right: $spacing-unit;
-    padding-left: $spacing-unit;
+    //padding-right: $spacing-unit;
+    //padding-left: $spacing-unit;
     @extend %clearfix;
 
     @include media-query($on-laptop) {
-        max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
-        max-width:         calc(#{$content-width} - (#{$spacing-unit}));
-        padding-right: $spacing-unit / 2;
-        padding-left: $spacing-unit / 2;
+        //padding-right: $spacing-unit / 2;
+        //padding-left: $spacing-unit / 2;
     }
 }
 
