--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
 
-  <script type="text/javascript" src="{{ "/javascripts/jquery-2.1.4.min.js" | prepend: site.baseurl }}"></script>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <script type="text/javascript" src="{{ "/javascripts/materialize.min.js" | prepend: site.baseurl }}"></script>
   <script type="text/javascript" src="{{ "/javascripts/packery.pkgd.min.js" | prepend: site.baseurl }}"></script>
 </head>
