--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
     {% include footer.html %}
 
   </body>
+  <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script>window.jQuery || document.write('<script src="javascrtips/jquery-2.1.4.min.js"><\/script>')</script>
   <script type="text/javascript">
     $('#container').packery();
   </script>
