--- a/css/main.scss
+++ b/css/main.scss
@@ -3,8 +3,23 @@
 ---
 @charset "utf-8";
 
+@font-face {
+    font-family: WeblySleek;
+    src: url("../fonts/ws/weblysleekuisl.ttf") format("truetype");
+}
+@font-face {
+    font-family: "WeblySleek";
+    src: url("../fonts/ws/weblysleekuisb.ttf") format("truetype");
+    font-weight: bold;
+}
+@font-face {
+    font-family: "WeblySleek";
+    src: url("../fonts/ws/weblysleekuil.ttf") format("truetype");
+    font-style: italic, oblique;
+}
+
 // Our variables
-$base-font-family: "Open Sans", sans-serif;
+$base-font-family: "Segoe UI", "WeblySeeks", "Open Sans", sans-serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
