--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html>
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body>
+<body>
 
     {% include header.html %}
 
     <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
+        <div class="wrapper">
+            {{ content }}
+        </div>
     </div>
 
     {% include footer.html %}
-
-  </body>
-  <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-  <script>window.jQuery || document.write('<script src="javascrtips/jquery-2.1.4.min.js"><\/script>')</script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/packery/1.4.2/packery.pkgd.min.js"></script>
-  <script type="text/javascript">
-    $(document).ready(function () {
-      $('#container').packery();
-    });
-  </script>
+    <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script>
+        window.jQuery || document.write('<script src="javascrtips/jquery-2.1.4.min.js"><\/script>')
+    </script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/packery/1.4.2/packery.pkgd.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('#container').packery();
+        });
+    </script>
+</body>
 </html>
