--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,6 @@
---- layout: default ---
+---
+layout: default
+---
 <div class="post">
     <div class="row article-hero" style="{% if page.color %}background-color: {{ page.color }};{% endif %}{% if page.image %}background-image: url('{{ site.baseurl}}/{{page.image}}');{% endif %}">
         <div class="container">
