Fix Color in Post Template

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="post">
-    <div class="row article-hero" style="{% if page.color %}background-color: {{ page.color }};{% endif %}{% if page.image %}background-image: url('{{ site.baseurl}}/{{page.image}}');{% endif %}">
+    <div class="row article-hero {% if page.color %}{{ page.color }}{% endif %}" {% if page.image %}style="background-image: url('{{ site.baseurl}}/{{page.image}}');"{% endif %}>
         <div class="container">
             <div class="row">
                 <div class="col s12">
