--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -13,7 +13,7 @@
 .site-title {
     font-size: 0px;
     line-height: 0px;
-    margin: 0 0 0 16px;
+    margin: 0 2px 0 16px;
     float: left;
 
     &,
@@ -33,8 +33,7 @@
 	vertical-align: sub;
     @include retina {
     	background-image: url("../images/logo_retina.png");
-        height: 81px;
-        width: 410px;
+        background-size: contain;
     }
 }
 
