--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: slim
 ---
 <div class="post">
     <div class="row article-hero {% if page.color %}{{ page.color }}{% endif %}" {% if page.image %}style="background-image: url('{{ site.baseurl}}/{{page.image}}');"{% endif %}>
