--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,15 +16,11 @@
     {% include footer.html %}
     <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
     <script>
-        window.jQuery || document.write('<script src="javascrtips/jquery-2.1.4.min.js"><\/script>')
+        window.jQuery || document.write('<script src="{{ "/javascripts/jquery-2.1.4.min.js" | prepend: site.baseurl }}"><\/script>')
     </script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/packery/1.4.2/packery.pkgd.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $('#container').packery();
-        });
-    </script>
-    {% include interaction.html %}
+    <script src="{{ "/javascripts/main.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/javascripts/interactions.js" | prepend: site.baseurl }}"></script>
 </body>
 </html>
