--- a/_layouts/slim.html
+++ b/_layouts/slim.html
@@ -20,11 +20,7 @@
     </script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/packery/1.4.2/packery.pkgd.min.js"></script>
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $('#container').packery();
-        });
-    </script>
-    {% include interaction.html %}
+    <script src="{{ "/javascripts/main.js" | prepend: site.baseurl }}"></script>
+    <script src="{{ "/javascripts/interactions.js" | prepend: site.baseurl }}"></script>
 </body>
 </html>
