Fixing travisci errors

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,16 +33,16 @@ layout: default
                 <div class="link-section">
                     <span class="section-title">Share this article</span>
                     <ul class="social-links-small">
-                        <li><a class="btn btn-social-icon btn-twitter">
+                        <li><a href="#" class="btn btn-social-icon btn-twitter">
                             <i class="fa fa-twitter"></i>
                         </a></li>
-                        <li><a class="btn btn-social-icon btn-facebook">
+                        <li><a href="#" class="btn btn-social-icon btn-facebook">
                             <i class="fa fa-facebook"></i>
                         </a></li>
-                        <li><a class="btn btn-social-icon btn-google">
+                        <li><a href="#" class="btn btn-social-icon btn-google">
                             <i class="fa fa-google"></i>
                         </a></li>
-                        <li><a class="btn btn-social-icon btn-linkedin">
+                        <li><a href="#" class="btn btn-social-icon btn-linkedin">
                             <i class="fa fa-linkedin"></i>
                         </a></li>
                     </ul>
@@ -59,21 +59,21 @@ layout: default
             <div class="link-section">
                 <span class="section-title">Share this article</span>
                 <ul class="social-links-small">
-                    <li><a class="btn btn-social-icon btn-twitter">
+                    <li><a href="#" class="btn btn-social-icon btn-twitter">
                         <i class="fa fa-twitter"></i>
                     </a></li>
-                    <li><a class="btn btn-social-icon btn-facebook">
+                    <li><a href="#" class="btn btn-social-icon btn-facebook">
                         <i class="fa fa-facebook"></i>
                     </a></li>
-                    <li><a class="btn btn-social-icon btn-google">
+                    <li><a href="#" class="btn btn-social-icon btn-google">
                         <i class="fa fa-google"></i>
                     </a></li>
-                    <li><a class="btn btn-social-icon btn-linkedin">
+                    <li><a href="#" class="btn btn-social-icon btn-linkedin">
                         <i class="fa fa-linkedin"></i>
                     </a></li>
                 </ul>
             </div>
-            <div class="link-section">
+            <!--<div class="link-section">
                 <span class="section-title">Other articles by {{ page.author }}</span>
                 <ul>
                 {% for authorpost in page.authorposts %}  
@@ -83,8 +83,8 @@ layout: default
                     </li>
                 {% endfor %}
                 </ul>
-            </div>  
-            <div class="link-section">
+            </div>  -->
+            <!--<div class="link-section">
                 <span class="section-title">Related articles</span>
                 <ul>
                 {% for relatedpost in page.relatedposts %}  
@@ -94,8 +94,8 @@ layout: default
                     </li>
                 {% endfor %}
                 </ul>
-            </div> 
-            <div class="link-section">
+            </div> -->
+            <!--<div class="link-section">
                 <span class="section-title">Most popular articles</span>
                 <ul>
                 {% for popularpost in page.popularposts %}  
@@ -105,8 +105,8 @@ layout: default
                     </li>
                 {% endfor %}
                 </ul>
-            </div> 
-            <div class="link-section">
+            </div> -->
+            <!--<div class="link-section">
                 <span class="section-title">Tags for this case study</span>
                 <ul class="tag-cloud">
                 {% for tag in page.tags %}  
@@ -116,7 +116,7 @@ layout: default
                     </li>
                 {% endfor %}
                 </ul>
-            </div> 
+            </div> -->
         </div>
     <div class="divider"></div>
 </div>
