Enable Code Resources & Author Images

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
             <div class="row">
                 <div class="col-xs-24">
                     {% if page.author %} {% if page.author-image %}
-                    <img src="{{ page.author-image }}" class="author-image circle" />{% endif %}
+                    <img src="{{site.baseurl}}/{{ page.author-image }}" class="author-image circle" />{% endif %}
                     <span class="author-name">
                         <a href="{{ page.author-link }}" itemprop="author">{{ page.author }}</a>
                     </span>{% endif %}-
@@ -50,11 +50,13 @@ layout: default
             </div>
         </div>
         <div class="col-lg-8 sidebar-content">
+            {% if page.coderesource %}
             <div class="link-section">
                 <span class="section-title">Code resources</span>
                 <div class="code-resource">
-                  http://github.com/samplepath/reponame
+                  <a href="{{ page.coderesource }}" alt="Code Resource for this case study">{{ page.coderesource }}</a>
                 </div>
+            {% endif %}
             </div>
             <div class="link-section">
                 <span class="section-title">Share this article</span>
